--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-div.table-holder {
-	text-align: center;
-}
-
 table.sudoku {
 	border-collapse: collapse;
 	font-family: Calibri, sans-serif;
@@ -11,8 +7,8 @@ table.sudoku {
 }
 .sudoku td {
 	border: solid thin;
-	height: 3em;
-	width: 3em;
+	height: 40px;
+	width: 40px;
 	text-align: center;
 	padding: 0;
 	font-size: 1.2em;
